# YPF_ML_Contest

./: .flake8  .gitignore  .pre-commit-config.yaml  README.md  pylintrc  pyproject.toml  requirements.txt  sample_dot_env
notebooks/: YPF_Model.py
