[tool.poetry]
name = "202210-YPF"
version = "0.1.0"
description = ""
authors = ["Santiago Donikian <santiagodonikian@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.9.1,<3.11"
pandas = "^1.3.5"
numpy = "^1.21.6"
matplotlib = "^3.5.1"
seaborn = "^0.11.2"
plotly = "^5.7.0"
ipython = "^7.33.0"
nbformat = "^5.3.0"
jupytext = "^1.13.8"
ipykernel = "^6.13.0"
kaggle = "^1.5.12"
jupyterlab = "^3.4.2"
mlflow = "^1.25.1"
psycopg2-binary = "^2.9.3"
optuna = "2.10.0"
lightgbm = "3.3.1"
pandas-profiling = "^3.3.0"
ipywidgets = "^8.0.2"

[tool.poetry.dev-dependencies]
ipykernel = "^6.13.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
