[tool.poetry]
name = "202210-YPF"
version = "0.1.0"
description = ""
authors = ["Santiago Donikian <santiagodonikian@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.9.1,<3.11"
pandas = "^1.3.5"
numpy = "^1.21.6"
plotly = "^5.7.0"
ipython = "^7.33.0"
nbformat = "^5.3.0"
optuna = "2.10.0"
lightgbm = "3.3.1"
ipywidgets = "^8.0.2"
matplotlib = "^3.2.2"
seaborn = "^0.11.2"


[tool.poetry.dev-dependencies]
ipykernel = "^6.13.0"
jupytext = "^1.13.8"
pre-commit = "^2.20.0"
black = "^22.10.0"
flake8 = "^5.0.4"
isort = "^5.10.1"
pylint = "^2.15.5"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
